# eAESy-RTFM

./: .envrc  .gdbinit  .gitignore  Cargo.toml  LICENSE-MIT  README.md  WHITEBOARD.md  gdbserver.sh  memory.nxp.x  memory.x  openocd.cfg  openocd.gdb  openocd.sh
.cargo/: config
etc/: default.nix  gdbserver.sh  openocd.gdb
etc/ld/: memory.nucleo.x  memory.nxp.x
example/: README.md
example/lpc_chip_43xx/: .cproject  version.txt
example/lpc_chip_43xx/Debug/src/: subdir.mk
example/lpc_chip_43xx/Release/: makefile
example/lpc_chip_43xx/Release/src/: subdir.mk
example/lpc_chip_43xx/src/: sysinit_18xx_43xx.c
example/periph_aes/: .cproject
example/periph_aes/example/: readme.txt
example/periph_aes/example/src/: aes.c  aeskey.c  aesopt.h
examples/: aes.rs  hw-aes-16B.rs  hw-aes.rs  sw-aes-16B.rs  sw-aes.rs  swhw-aes-16B.rs  swhw-aes.rs
src/: aes128cbc.rs  default.rs  lib.rs  s32k144.rs
