[package]
name = "eaesy-rtfm"
version = "0.1.0"
authors = ["tmplt <tmplt@dragons.rocks>"]
edition = "2018"

[features]
default = ["software"]
software = ["block-modes", "aes", "block-cipher-trait"]
s32k144evb-q100 = ["s32k144evb", "s32k144"]

[dev-dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.7"
hex-literal = "0.2.1"
panic-halt = "0.2"
s32k144 = "0.10.0"
s32k144evb = { git = "https://github.com/kjetilkjeka/s32k144evb.rs", default-features = false }

[dependencies]
block-cipher-trait = { version = "0.6.2", optional = true }
s32k144 = { version = "0.10.0", optional = true }
s32k144evb = { git = "https://github.com/kjetilkjeka/s32k144evb.rs", default-features = false, optional = true }
block-modes = { version = "0.3", default-features = false, optional = true }
aes = { version = "0.3", default-features = false, optional = true }

[[example]]
name = "hw-aes-16B"
required-features = ["s32k144evb-q100"]

[[example]]
name = "sw-aes-16B"
required-features = ["software"]

[[example]]
name = "swhw-aes-16B"
required-features = ["s32k144evb-q100", "software"]
